<resources>
    <string name="app_name">My Application</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_coffee_app">Welcome to Coffee app!</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="rewrite_password">Rewrite Password</string>
    <string name="login_page">Login Page</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="title_activity_main_home_page">mainHomePage</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_timetable">TimeTable</string>
    <string name="title_account">Account</string>
    <string name="permission_required_toast">permission required toast</string>
    <string name="permission_rationale_location">permission rationale location</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="item_details_title" translation_description="Title for the plant details screen where the user can see the details for a specific plant.">Item details</string>
    <string name="action_settings">Settings</string>
    <string name="share_text_plant" translation_description="The default messaged used when sharing a plant on SNS, etc.">Check out the %s plant in the Android Sunflower app</string>
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
</resources>
